# nxp-pac

./: Cargo.toml  build.rs
generator/src/: main.rs
src/: lib.rs  metadata.rs
src/chips/mimxrt1064/pwm/: vals.rs
src/chips/mimxrt685s_cm33/: _vectors.rs  adc.rs  ahb_secure_ctrl.rs  cache64.rs  cache64_polsel.rs  casper.rs  clkctl0.rs  clkctl1.rs  cmp.rs  crc.rs  ctimer.rs  device.x  dma.rs  dmic.rs  espi.rs  flexcomm.rs  flexspi.rs  freqme.rs  gpio.rs  hashcrypt.rs  i2c.rs  i2s.rs  i3c.rs  inputmux.rs  iopctl.rs  mod.rs  mrt.rs  mua.rs  ocotp.rs  ostimer.rs  otfad.rs  pint.rs  pmc.rs  powerquad.rs  puf.rs  rstctl0.rs  rstctl1.rs  rtc.rs  scn_scb.rs  sct.rs  (+13 more)
src/chips/mimxrt685s_cm33/adc/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/ahb_secure_ctrl/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/cache64/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/cache64_polsel/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/casper/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/clkctl0/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/clkctl1/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/cmp/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/crc/: regs.rs
src/chips/mimxrt685s_cm33/ctimer/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/dma/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/dmic/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/espi/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/flexcomm/: regs.rs  vals.rs
src/chips/mimxrt685s_cm33/gpio/: regs.rs  (+1 more)
transforms/: mimxrt1064.yaml  mimxrt685s_cm33.yaml
transforms/imxrt685s/: adc.yaml  crc.yaml  dma.yaml  iopctl.yaml  renames.yaml
(+65 files in other folders)
