[workspace]
members = [ "generator" ]

[package]
name = "nxp-pac"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
description = "Peripheral Access Crate (PAC) for NXP Semiconductor chips."
keywords = [
    "no-std",
    "arm",
    "cortex-m",
    "peripherals",
    "nxp",
    "imxrt",
]
# repository = ""
# documentation = "" 

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }
defmt = { version = "0.3.10", optional = true }

[build-dependencies]
cfg_aliases = "0.2.1"

[features]
default = []
rt = ["cortex-m-rt/device"]
defmt = ["dep:defmt"]

metadata = []

#! Chip features

## IMXRT
mimxrt1011 = []
mimxrt1062 = []

## MCX
mcxn947_cm33_core0 = []
mcxn947_cm33_core1 = []

## LPC55S69
lpc55s69_cm33_core0 = []
lpc55s69_cm33_core1 = []
